--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,12 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-card>
+    <ion-card-header>
+      Novo lance! <ion-icon name="ion-android-notifications"></ion-icon>
+    </ion-card-header>
+    <ion-card-content>
+      A empresa X fez um lance de R$ 5.000 em tudo que você precisa!
+    </ion-card-content>
+  </ion-card>
 </ion-content>
