Fluxo de login/esqueci a senha finalizado

--- a/src/pages/auth/login/login.html
+++ b/src/pages/auth/login/login.html
@@ -1,8 +1,5 @@
 <ion-header>
     <ion-navbar>
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
         <ion-title>
             Login
         </ion-title>
@@ -10,8 +7,8 @@
 </ion-header>
 <ion-content>
 
-    <div style="margin-top: 10%">
-        <img src="/assets/img/logo.png" />
+    <div style="margin-top: 10%; text-align: center;">
+        <img src="/assets/image/logo.png" />
     </div>
 
     <ion-list>
