--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,16 @@
 </head>
 <body>
 
+  <!-- AWS Cognito files -->
+<script src="assets/js/jsbn.js"></script>
+<script src="assets/js/jsbn2.js"></script>
+<script src="assets/js/sjcl.js"></script>
+<script src="assets/js/aws-cognito-sdk.min.js"></script>
+<script src="assets/js/amazon-cognito-identity.min.js"></script>
+<script src="assets/js/aws-sdk-2.7.5.min.js"></script>
+<script src="assets/js/aws-sdk-mobile-analytics.min.js"></script>
+
+
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
