--- a/src/pages/bid/bid.html
+++ b/src/pages/bid/bid.html
@@ -1,11 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Leilão
+      Orçamento
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <ion-list>
+    <ion-item>
+      <p>Bebidas</p>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
