--- a/src/pages/auth/register/register.html
+++ b/src/pages/auth/register/register.html
@@ -22,6 +22,19 @@
             <ion-input [(ngModel)]="registrationUser.email" type="email"></ion-input>
         </ion-item>
 
+        <ion-label>Tipo de Usuário</ion-label>
+        <ion-toggle (ionChange)="isDisabled = !isDisabled"></ion-toggle>
+
+        <!--<ion-item>
+            <ion-label floating>Telefone</ion-label>
+            <ion-input [(ngModel)]="registrationUser.name" type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label floating>Data Nascimento</ion-label>
+            <ion-input [(ngModel)]="registrationUser.name" type="text"></ion-input>
+        </ion-item>-->
+
         <ion-item>
             <ion-label floating>Senha</ion-label>
             <ion-input [(ngModel)]="registrationUser.password" type="password"></ion-input>
