--- a/src/pages/auth/register/register.html
+++ b/src/pages/auth/register/register.html
@@ -67,7 +67,7 @@
     <div *ngIf="userType == 'provider'">
         <ion-item>
             <ion-label floating>Nome da Empresa</ion-label>
-            <ion-input [(ngModel)]="provider.name" type="text"></ion-input>
+            <ion-input [(ngModel)]="provider.providerName" type="text"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -78,10 +78,10 @@
         <ion-item>
             <ion-label floating>Serviços Oferecidos</ion-label>
             <ion-select [(ngModel)]="provider.services" multiple="true">
-                <ion-option>Fotógrafo</ion-option>
-                <ion-option>Buffet</ion-option>
-                <ion-option>Locação de Espaço</ion-option>
-                <ion-option>Decoração</ion-option>
+                <ion-option value="PHOTOGRAPH">Fotógrafo</ion-option>
+                <ion-option value="BUFFET">Buffet</ion-option>
+                <ion-option value="ROOM">Locação de Espaço</ion-option>
+                <ion-option value="DECORATION">Decoração</ion-option>
             </ion-select>
         </ion-item>
     </div>
