With ionic config files

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 
   <h1>Olá {{userName}}, boa noite!</h1>
 
-  <ion-card>
+  <!--<ion-card>
     <ion-card-header>
       <ion-grid>
         <ion-row>
@@ -69,7 +69,5 @@
       <ion-card-content>
         A empresa X fez um lance de R$ 5.000 em tudo que você precisa!
       </ion-card-content>
-    </ion-card>
-
-
+    </ion-card>-->
 </ion-content>
