--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,5 +2,6 @@
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Orçamento" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Leilão" tabIcon="briefcase"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Perfil" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Busca" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Perfil" tabIcon="person"></ion-tab>
 </ion-tabs>
