working on provider profile

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-content padding>
 
-  <h1>Olá {{userName}}, boa noite!</h1>
+  <h1>Olá {{userName}}, {{greeting}}</h1>
 
   <!--<ion-card>
     <ion-card-header>
