Creating budget models

--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -6,11 +6,29 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list>
-    <ion-item>
-      <p>Bebidas</p>
-    </ion-item>
-  </ion-list>
+<ion-content>
+  <ion-item-group>
+    <ion-item-divider color="light">Buffet</ion-item-divider>
+    <button ion-item>
+        <ion-icon name="leaf" item-start color="primary"></ion-icon>
+        <ion-label>Comidas</ion-label>
+        <ion-icon name ="arrow-forward" item-end></ion-icon>
+      </button>
+    <button ion-item>
+        Bebidas
+          <ion-icon name="arrow-forward" item-end></ion-icon>
+          <ion-icon name="leaf" item-left></ion-icon>
+            <h3 style="padding-left: 1%; padding-top: 1%;"> - Refrigerante 10 Pessoas</h3> 
+            <h3 style="padding-left: 1%;"> - Cerveja 20 Pessoas</h3>
+            <h3 style="padding-left: 1%;"> - Suco 30 Pessoas</h3>
+    </button>
+
+  </ion-item-group>
+  <ion-item-group>
+    <ion-item-divider color="light">Decoração</ion-item-divider>
+    <ion-item>Flores</ion-item>
+    <ion-item>Cortinas</ion-item>
+    <ion-item>Convites</ion-item>
+  </ion-item-group>
 
 </ion-content>
