--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-item-group>
+  <!--<ion-item-group>
     <ion-item-divider color="light">Buffet</ion-item-divider>
     <button ion-item>
         <ion-icon name="pizza" item-start color="primary"></ion-icon>
@@ -29,14 +29,20 @@
     <ion-item>Flores</ion-item>
     <ion-item>Cortinas</ion-item>
     <ion-item>Convites</ion-item>
-  </ion-item-group>
-
-
-
+  </ion-item-group>-->
 
   <div *ngFor="let service of pageBudget.services; trackBy index;">
     <ion-item-group>
-      <ion-item-divider color="light">{{service.serviceName}}</ion-item-divider>
+      <ion-item-divider color="light">{{service.serviceName}} 
+          <button ion-button icon-only item-end>
+                Adicionar itens de {{service.serviceName}} 
+          </button>
+      </ion-item-divider>
+      <button ion-item *ngFor="let category of service.categories; trackBy index;">
+        <ion-label>{{category.categoryName}}</ion-label>
+        <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
+        <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
+      </button>
     </ion-item-group>
   </div>
 
