--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -40,17 +40,21 @@
           </button>
       </ion-item-divider>
       <div *ngIf="service.isSelected">
-        <button ion-item *ngFor="let category of service.categories; trackBy index;" (click)="addItems(category)">
+        <button ion-item *ngFor="let category of service.categories; trackBy index;" (click)="addItems(category, service)">
           <ion-label>{{category.categoryName}}</ion-label>
           <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
           <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
         </button>
       </div>
-
     </ion-item-group>
-
-
   </div>
 
+  <ion-list>
+    <ion-item>
+      <button ion-button block outline large (click)="enableEdit()">Próximo Passo</button>
+    </ion-item>
+  </ion-list>
+
+  
 
 </ion-content>
