--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -41,9 +41,11 @@
       </ion-item-divider>
       <div *ngIf="service.isSelected">
         <button ion-item *ngFor="let category of service.categories; trackBy index;" (click)="addItems(category, service)">
-          <ion-label>{{category.categoryName}}</ion-label>
+          {{category.categoryName}}
           <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
           <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
+          abc
+          {{category.hasSelectedItems()}}
         </button>
       </div>
     </ion-item-group>
