Creating second step of budget

--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -1,35 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Confirmação Orçamento
+      Orçamento
     </ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content>
-  <!--<ion-item-group>
-    <ion-item-divider color="light">Buffet</ion-item-divider>
-    <button ion-item>
-        <ion-icon name="pizza" item-start color="primary"></ion-icon>
-        <ion-label>Comidas</ion-label>
-        <ion-icon name ="arrow-forward" item-end></ion-icon>
-      </button>
-    <button ion-item>
-        Bebidas
-          <ion-icon name="arrow-forward" item-end></ion-icon>
-          <ion-icon name="pizza" item-left></ion-icon>
-            <h3 style="padding-left: 1%; padding-top: 1%;"> - Refrigerante 10 Pessoas</h3> 
-            <h3 style="padding-left: 1%;"> - Cerveja 20 Pessoas</h3>
-            <h3 style="padding-left: 1%;"> - Suco 30 Pessoas</h3>
-    </button>
-
-  </ion-item-group>
-  <ion-item-group>
-    <ion-item-divider color="light">Decoração</ion-item-divider>
-    <ion-item>Flores</ion-item>
-    <ion-item>Cortinas</ion-item>
-    <ion-item>Convites</ion-item>
-  </ion-item-group>-->
 
   <div *ngFor="let service of pageBudget.services; trackBy index;">
     <ion-item-group>
@@ -46,6 +22,9 @@
           <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
           {{category.hasSelectedItems()}}
         </button>
+        <ion-item style="padding-left: 20%;">
+          teste
+        </ion-item>
       </div>
     </ion-item-group>
   </div>
@@ -55,7 +34,4 @@
       <button ion-button block outline large (click)="nextStep()">Próximo Passo</button>
     </ion-item>
   </ion-list>
-
-  
-
 </ion-content>
