--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Confirmação Orçamento
+     Orçamento
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -44,7 +44,6 @@
           {{category.categoryName}}
           <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
           <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
-          {{category.hasSelectedItems()}}
         </button>
       </div>
     </ion-item-group>
