--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -7,39 +7,42 @@
 </ion-header>
 <ion-content>
 
-  <!--<div *ngFor="let service of pageBudget.services; trackBy index;">
+  <div *ngFor="let service of pageBudget.services; trackBy index;">
     <ion-item-group>
       <ion-item-divider color="light">{{service.serviceName}}
       </ion-item-divider>
-          <div *ngFor="let category of service.categories; trackBy index;">
-              <ion-item-divider color="grey">{{category.categoryName}}
-              </ion-item-divider>
-              <div *ngFor="let item of category.items; trackBy index">
-                <ion-item>
-                  <ion-label>Qtd. de Pessoas - {{item.name}}</ion-label>
-                  <ion-select [(ngModel)]="item.peopleQuantity">
-                    <ion-option value="10">10</ion-option>
-                    <ion-option value="20">20</ion-option>
-                    <ion-option value="30">30</ion-option>
-                    <ion-option value="40">40</ion-option>
-                    <ion-option value="50">50</ion-option>
-                    <ion-option value="60">60</ion-option>
-                    <ion-option value="70">70</ion-option>
-                    <ion-option value="80">80</ion-option>
-                    <ion-option value="90">90</ion-option>
-                    <ion-option value="100">100</ion-option>
-                    <ion-option value="150">150</ion-option>
-                    <ion-option value="200">200</ion-option>
-                  </ion-select>
-                  <button ion-button item-end outline icon-start>
-                      <ion-icon name='md-trash'></ion-icon>
-                    </button>
-                    <button ion-button item-end outline icon-start>
-                        <ion-icon name='md-checkmark'></ion-icon>
-                      </button>
-                </ion-item>
-              </div>
-      </div>-->
+      <div *ngFor="let category of service.categories; trackBy index;">
+        <ion-item-divider color="grey">{{category.categoryName}}
+        </ion-item-divider>
+        <div *ngFor="let item of category.items; trackBy index">
+          <ion-item>
+            <ion-label>Qtd. de Pessoas - {{item.name}}</ion-label>
+            <ion-select [(ngModel)]="item.peopleQuantity">
+              <ion-option value="10">10</ion-option>
+              <ion-option value="20">20</ion-option>
+              <ion-option value="30">30</ion-option>
+              <ion-option value="40">40</ion-option>
+              <ion-option value="50">50</ion-option>
+              <ion-option value="60">60</ion-option>
+              <ion-option value="70">70</ion-option>
+              <ion-option value="80">80</ion-option>
+              <ion-option value="90">90</ion-option>
+              <ion-option value="100">100</ion-option>
+              <ion-option value="150">150</ion-option>
+              <ion-option value="200">200</ion-option>
+            </ion-select>
+      </ion-item>
+    </div>
+  </div>
+</ion-item-group>
+</div>
+
+<ion-list>
+    <ion-item>
+      <button ion-button block outline large (click)="nextStep()">Enviar Orçamento</button>
+    </ion-item>
+  </ion-list>
+</ion-content>
 
 
 
@@ -55,12 +58,8 @@
           teste
         </ion-item>
       </div>-->
-    <!--</ion-item-group>
-  </div>
+      <!--</ion-item-group>
+  </div>-->
 
-  <ion-list>
-    <ion-item>
-      <button ion-button block outline large (click)="nextStep()">Enviar Orçamento</button>
-    </ion-item>
-  </ion-list>
-</ion-content>-->
+      
+
