--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -14,7 +14,7 @@
       <div *ngFor="let category of service.categories; trackBy index;">
         <ion-item-divider color="grey">{{category.categoryName}}
         </ion-item-divider>
-        <div *ngFor="let item of category.items; trackBy index">
+        <div *ngFor="let item of category.items; trackBy index; let last = last">
           <ion-item>
             <ion-label>Qtd. de Pessoas - {{item.name}}</ion-label>
             <ion-select [(ngModel)]="item.peopleQuantity">
@@ -31,13 +31,19 @@
               <ion-option value="150">150</ion-option>
               <ion-option value="200">200</ion-option>
             </ion-select>
-      </ion-item>
-    </div>
+          </ion-item>
+          <ion-item>
+            <ion-label>Descrição</ion-label>
+            <ion-input style="height: 50px;"type="text"></ion-input>
+          </ion-item>
+          <ion-item-divider *ngIf="!last" color="grey"></ion-item-divider>
+        </div>
+      </div>
+    </ion-item-group>
   </div>
-</ion-item-group>
-</div>
+  <ion-item-divider color="grey"></ion-item-divider>
 
-<ion-list>
+  <ion-list>
     <ion-item>
       <button ion-button block outline large (click)="nextStep()">Enviar Orçamento</button>
     </ion-item>
@@ -47,7 +53,7 @@
 
 
 
-      <!--<div *ngIf="service.isSelected">
+<!--<div *ngIf="service.isSelected">
         <button ion-item *ngFor="let category of service.categories; trackBy index;" (click)="addItems(category, service)">
           {{category.categoryName}}
           <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
@@ -58,8 +64,5 @@
           teste
         </ion-item>
       </div>-->
-      <!--</ion-item-group>
+<!--</ion-item-group>
   </div>-->
-
-      
-
