Adding more info on budget

--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -34,19 +34,30 @@
           </ion-item>
           <ion-item>
             <ion-label>Descrição</ion-label>
-            <ion-input style="height: 50px;"type="text"></ion-input>
+            <ion-input style="height: 50px;" type="text"></ion-input>
           </ion-item>
           <ion-item-divider *ngIf="!last" color="grey"></ion-item-divider>
         </div>
       </div>
     </ion-item-group>
   </div>
-  <ion-item-divider color="grey"></ion-item-divider>
-
-  <ion-list>
+  <ion-item-group>
+    <ion-item-divider color="grey"></ion-item-divider>
+    <ion-item>
+        <ion-label>Fim do Leilão</ion-label>
+        <ion-datetime min="2017-09-25" displayFormat="DD MM YYYY, HH:mm" [(ngModel)]="myDate"></ion-datetime>
+      </ion-item>
+      <ion-item-divider color="grey"></ion-item-divider>
     <ion-item>
       <button ion-button block outline large (click)="nextStep()">Enviar Orçamento</button>
     </ion-item>
+    
+  </ion-item-group>
+
+
+
+  <ion-list>
+
   </ion-list>
 </ion-content>
 
