working on bid page

--- a/src/pages/bid/bid.html
+++ b/src/pages/bid/bid.html
@@ -7,10 +7,31 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
+  <ion-card>
+
     <ion-item>
-      <p>Bebidas</p>
+      <ion-avatar item-start>
+        <img src="img/marty-avatar.png">
+      </ion-avatar>
+      <h2>Marty McFly</h2>
+      <p>November 5, 1955</p>
     </ion-item>
-  </ion-list>
+
+    <img src="img/advance-card-bttf.png">
+
+    <ion-card-content>
+      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?!
+        Whoa. This is heavy.</p>
+    </ion-card-content>
+
+    <ion-row>
+      <ion-col center text-center>
+        <ion-item>
+          <button ion-button full>Ver Detalhes</button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
 
 </ion-content>
