--- a/src/pages/bid/bid.html
+++ b/src/pages/bid/bid.html
@@ -6,28 +6,27 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-card>
-
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="img/marty-avatar.png">
-      </ion-avatar>
-      <h2>Marty McFly</h2>
-      <p>November 5, 1955</p>
-    </ion-item>
-
-    <img src="img/advance-card-bttf.png">
+    <ion-item-divider color="green" text-center>
+      <ion-label text-left>EM ANDAMENTO</ion-label>
+      <ion-label text-right>1h 20m restantes</ion-label>
+    </ion-item-divider>
 
     <ion-card-content>
-      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?!
-        Whoa. This is heavy.</p>
+      
     </ion-card-content>
+
+    <ion-item-group>
+      <ion-item-divider color="grey" text-center>
+        Lances
+      </ion-item-divider>
+    </ion-item-group>
 
     <ion-row>
       <ion-col center text-center>
         <ion-item>
-          <button ion-button full>Ver Detalhes</button>
+          <!--<button ion-button full>Ver Detalhes</button>-->
         </ion-item>
       </ion-col>
     </ion-row>
