fixing bug peoplequantity empty

--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -18,7 +18,7 @@
           <ion-item>
             <ion-label>Qtd. de Pessoas - {{item.name}}</ion-label>
             <ion-select [(ngModel)]="item.peopleQuantity" [disabled]="editable">
-              <ion-option value="10">10</ion-option>
+              <ion-option value="10" selected="true">10</ion-option>
               <ion-option value="20">20</ion-option>
               <ion-option value="30">30</ion-option>
               <ion-option value="40">40</ion-option>
