--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-     Orçamento
+      Orçamento
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -45,6 +45,9 @@
           <ion-icon name="{{category.categoryIcon}}" item-start color="primary"></ion-icon>
           <ion-icon name ="{{category.GetRightIcon()}}" item-end></ion-icon>
         </button>
+        <!--<div *ngFor="let item of category.GetSelectedItems(); trackBy index;">
+          <h3 style="padding-left: 1%;"> Cerveja</h3>
+        </div>-->
       </div>
     </ion-item-group>
   </div>
@@ -55,6 +58,6 @@
     </ion-item>
   </ion-list>
 
-  
+
 
 </ion-content>
