working on friendly messages for budget items on budget confirmation

--- a/src/pages/budgetStepTwo/budgetStepTwo.html
+++ b/src/pages/budgetStepTwo/budgetStepTwo.html
@@ -9,8 +9,9 @@
 
   <div *ngFor="let service of pageBudget.services; trackBy index;">
     <ion-item-group>
-      <ion-item-divider color="light">{{service.serviceName}}
-      </ion-item-divider>
+      <ion-item-divider *ngIf="!editable" color="light">{{service.serviceName}}</ion-item-divider>
+      <ion-item-divider *ngIf="editable" color="light">{{getServiceName(service.serviceType)}}</ion-item-divider>
+
       <div *ngFor="let category of service.categories; trackBy index;">
         <ion-item-divider color="grey">{{category.categoryName}}
         </ion-item-divider>
