--- a/src/pages/auth/login/login.html
+++ b/src/pages/auth/login/login.html
@@ -8,7 +8,7 @@
 <ion-content>
 
     <div style="margin-top: 10%; text-align: center;">
-        <img src="/assets/image/logo.png" />
+        <img src="https://s3.amazonaws.com/wwww.weddingassist.me/logo.png" />
     </div>
 
     <ion-list>
